# unraid-actuator

./: README.md  copilot-instructions.md  main.py  pyproject.toml
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  ROADMAP.md  STATE.md  v1.0-MILESTONE-AUDIT.md
.planning/codebase/: ARCHITECTURE.md  CONCERNS.md  CONVENTIONS.md  INTEGRATIONS.md  STACK.md  STRUCTURE.md  TESTING.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  PITFALLS.md  STACK.md  SUMMARY.md
scripts/: 1_actuator-install.sh  4_actuator-init.sh.template
src/unraid_actuator/: __init__.py  build.py  build_models.py  build_paths.py  cli.py  compose_build.py  compose_runtime.py  compose_validation.py  config.py  deploy.py  deploy_models.py  deploy_tree.py  discovery.py  env_materialize.py  init.py  reconcile.py  reconcile_git.py  reconcile_lock.py  reconcile_models.py  reconcile_plan.py  reconcile_visibility.py  report.py  runner.py  schemas.py  secrets.py  template_render.py  validate.py  validation_models.py  validation_rules.py
tests/: conftest.py
tests/unit/: test_build_cli.py  test_build_paths.py  test_build_service.py  test_cli_smoke.py  test_compose_build.py  test_compose_runtime.py  test_compose_validation.py  test_config_store.py  test_deploy_cli.py  test_deploy_service.py  test_deploy_tree.py  test_discovery.py  test_env_materialize.py  test_init_command.py  test_reconcile_cli.py  test_reconcile_git.py  test_reconcile_lock.py  test_reconcile_plan.py  test_reconcile_service.py  test_runner.py  (+10 more)
(+92 files in other folders)
