[build-system]
requires = ["uv_build>=0.11.7,<0.12"]
build-backend = "uv_build"

[project]
name = "unraid-actuator"
version = "0.1.0"
description = "Reconcile Git-managed Docker Compose state for a single Unraid host."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "jinja2>=3.1.6,<4",
    "python-dotenv>=1.2.2,<2",
    "strictyaml>=1.7.3,<2",
]

[project.scripts]
unraid-actuator = "unraid_actuator.cli:main"

[dependency-groups]
dev = [
    "basedpyright>=1.31.3,<2",
    "pytest>=8.3.5,<9",
    "ruff>=0.11.13,<0.12",
]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
target-version = "py313"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.basedpyright]
pythonVersion = "3.13"
typeCheckingMode = "strict"
include = ["src"]
reportMissingTypeStubs = "none"
reportDeprecated = "none"
